--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
 	box-sizing: border-box;
 }
 
+html{
+	font-size: 93.75%; /* 15px -  */
+}
+
 /* HEADER ==================== */
 
 body{
@@ -53,6 +57,20 @@ h2{
 	margin-bottom: .8rem;
 }
 
+/* Links e Buttons ------------------ */
+a{
+	color: #49AA26;
+	text-decoration: none;
+}
+
+a:hover{
+	color: #3dd705;
+}
+
+.button.new{
+	display: inline-block;
+	margin-bottom: .8rem;
+}
 
 /* MAIN ==================== */
 /* Balance ----------------- */
@@ -78,6 +96,10 @@ h2{
 .card h3{
 	font-weight: 400;
 	font-size: 1rem;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .card p{
@@ -93,6 +115,13 @@ h2{
 }
 
 /* Table ------------------ */
+#transaction{
+	display: block;
+	width: 100%;
+	overflow-x: auto;
+
+}
+
 #data-table{
 	color: #969cb3;
 	width: 100%;
@@ -102,6 +131,11 @@ h2{
 table thead tr th:first-child, 
 table tbody tr td:first-child{
 	border-radius: .25rem 0 0 .25rem;
+}
+
+table thead tr th:last-child, 
+table tbody tr td:last-child{
+	border-radius: 0 .25rem .25rem 0;
 }
 
 table th{
@@ -146,3 +180,17 @@ footer{
 	padding: 4rem 0 2rem;
 	opacity: .6;
 }
+
+/* RESPONSIVIDADE ==================== */
+@media screen and (min-width: 800px){
+	html{
+		font-size: 87.5%; /* 14px */
+	}
+
+	#balance{
+		display: grid; /* horizontal e vertical */
+		grid-template-columns: repeat(3, 1fr);
+		gap: 2rem;
+	}
+}
+
