--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ td.expense{
 	top: 0;
 	opacity: 0;
 	visibility: hidden;
+	z-index: 999;
 
 	display: flex;
 	align-items: center;
@@ -230,6 +231,8 @@ td.expense{
 .modal{
 	background: #F0F2F5;
 	padding: 2.4rem;
+
+	z-index: 2;
 }
 
 /* FORMS ==================== */
